k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: backend
